[gd_scene load_steps=2 format=3 uid="uid://be85a2c0ch483"]

[ext_resource type="Script" path="res://scripts/enemy_spawner.gd" id="1_8gn0m"]

[node name="EnemySpawner" type="Node2D"]
script = ExtResource("1_8gn0m")

[node name="z_cooldown" type="Timer" parent="."]

[node name="m_cooldown" type="Timer" parent="."]

[connection signal="timeout" from="z_cooldown" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="m_cooldown" to="." method="_on_m_cooldown_timeout"]
